// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChartFacet /> should render properly 1`] = `
.emotion-59 {
  padding-right: 32px;
  padding-bottom: 32px;
  width: 470px;
}

.emotion-58 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  border-radius: 2px;
  padding: 16px;
}

.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-57 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-57 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-56 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 8px;
  padding-right: 28px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

.emotion-51 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  color: #ffffff;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-8:hover,
.emotion-8.focus-visible:focus {
  background-color: #027aff38;
  color: #ffffff;
}

.emotion-8:hover svg,
.emotion-8.focus-visible:focus svg {
  color: #ffffff;
}

.emotion-6 {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  width: 100%;
  background-color: #4a90e2;
}

.emotion-3 {
  height: 4px;
  width: 0%;
  border-top: 1px solid #3b3b3b;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

.emotion-7 {
  margin-top: 4px;
  padding: 4px;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-9 {
  width: 67%;
  background-color: #a03dc7;
}

.emotion-10 {
  height: 4px;
  width: 33%;
  border-top: 1px solid #3b3b3b;
}

.emotion-16 {
  width: 34%;
  background-color: #d6680b;
}

.emotion-17 {
  height: 4px;
  width: 66%;
  border-top: 1px solid #3b3b3b;
}

.emotion-23 {
  width: 34%;
  background-color: #ebb52e;
}

.emotion-30 {
  width: 34%;
  background-color: #00bdc1;
}

.emotion-37 {
  width: 34%;
  background-color: #c54a4a;
}

.emotion-44 {
  width: 0%;
  background-color: #ff7867;
}

.emotion-45 {
  height: 4px;
  width: 100%;
  border-top: 1px solid #3b3b3b;
}

.emotion-55 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-54 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #808080;
  font-family: Roboto Condensed;
}

.emotion-54:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-54[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-54:hover,
.emotion-54.focus-visible:focus {
  color: #ffffff;
}

.emotion-53 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

<div
  className="emotion-59"
>
  <div
    className="emotion-58"
  >
    <h3
      className="emotion-0"
    >
      location.city
    </h3>
    <div
      className="emotion-57"
    >
      <div
        className="emotion-56"
      >
        <div
          className="emotion-1"
        >
          <div>
            LABEL
          </div>
          <div>
            COUNT
          </div>
        </div>
        <ul
          className="emotion-51"
        >
          <li>
            <button
              aria-label="Tyngsboro"
              className="emotion-8"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-6"
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-2"
                  />
                  <div
                    className="emotion-3"
                  />
                </div>
                <div
                  className="emotion-5"
                >
                  <div>
                    Tyngsboro
                  </div>
                  <div>
                    3
                  </div>
                </div>
              </div>
              <div
                className="emotion-7"
              >
                <svg
                  data-file-name="filter.svg"
                  width={20}
                />
              </div>
            </button>
          </li>
          <li>
            <button
              aria-label="Brooklyn"
              className="emotion-8"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-6"
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-9"
                  />
                  <div
                    className="emotion-10"
                  />
                </div>
                <div
                  className="emotion-5"
                >
                  <div>
                    Brooklyn
                  </div>
                  <div>
                    2
                  </div>
                </div>
              </div>
              <div
                className="emotion-7"
              >
                <svg
                  data-file-name="filter.svg"
                  width={20}
                />
              </div>
            </button>
          </li>
          <li>
            <button
              aria-label="Cát Bà"
              className="emotion-8"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-6"
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-16"
                  />
                  <div
                    className="emotion-17"
                  />
                </div>
                <div
                  className="emotion-5"
                >
                  <div>
                    Cát Bà
                  </div>
                  <div>
                    1
                  </div>
                </div>
              </div>
              <div
                className="emotion-7"
              >
                <svg
                  data-file-name="filter.svg"
                  width={20}
                />
              </div>
            </button>
          </li>
          <li>
            <button
              aria-label="La Habana Vieja"
              className="emotion-8"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-6"
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-23"
                  />
                  <div
                    className="emotion-17"
                  />
                </div>
                <div
                  className="emotion-5"
                >
                  <div>
                    La Habana Vieja
                  </div>
                  <div>
                    1
                  </div>
                </div>
              </div>
              <div
                className="emotion-7"
              >
                <svg
                  data-file-name="filter.svg"
                  width={20}
                />
              </div>
            </button>
          </li>
          <li>
            <button
              aria-label="North Glendale"
              className="emotion-8"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-6"
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-30"
                  />
                  <div
                    className="emotion-17"
                  />
                </div>
                <div
                  className="emotion-5"
                >
                  <div>
                    North Glendale
                  </div>
                  <div>
                    1
                  </div>
                </div>
              </div>
              <div
                className="emotion-7"
              >
                <svg
                  data-file-name="filter.svg"
                  width={20}
                />
              </div>
            </button>
          </li>
          <li>
            <button
              aria-label="Saalfelden am Steinernen Meer"
              className="emotion-8"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-6"
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-37"
                  />
                  <div
                    className="emotion-17"
                  />
                </div>
                <div
                  className="emotion-5"
                >
                  <div>
                    Saalfelden am Steinernen Meer
                  </div>
                  <div>
                    1
                  </div>
                </div>
              </div>
              <div
                className="emotion-7"
              >
                <svg
                  data-file-name="filter.svg"
                  width={20}
                />
              </div>
            </button>
          </li>
          <li>
            <button
              aria-label="Zermatt"
              className="emotion-8"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-6"
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-44"
                  />
                  <div
                    className="emotion-45"
                  />
                </div>
                <div
                  className="emotion-5"
                >
                  <div>
                    Zermatt
                  </div>
                  <div>
                    0
                  </div>
                </div>
              </div>
              <div
                className="emotion-7"
              >
                <svg
                  data-file-name="filter.svg"
                  width={20}
                />
              </div>
            </button>
          </li>
        </ul>
        <div
          className="emotion-55"
        >
          <button
            aria-label="Add Field Filter"
            className="emotion-54"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-53"
            >
              <div
                className="emotion-52"
              >
                <svg
                  data-file-name="filter.svg"
                  width={20}
                />
              </div>
              Add Field Filter
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChartFacet /> should render properly without data 1`] = `
.emotion-10 {
  padding-right: 32px;
  padding-bottom: 32px;
  width: 470px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  border-radius: 2px;
  padding: 16px;
}

.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-8 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-8 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 8px;
  padding-right: 28px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #808080;
  font-family: Roboto Condensed;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus {
  color: #ffffff;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

<div
  className="emotion-10"
>
  <div
    className="emotion-9"
  >
    <h3
      className="emotion-0"
    >
      location.city
    </h3>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-7"
      >
        <div
          className="emotion-1"
        >
          <div>
            LABEL
          </div>
          <div>
            COUNT
          </div>
        </div>
        <ul
          className="emotion-2"
        />
        <div
          className="emotion-6"
        >
          <button
            aria-label="Add Field Filter"
            className="emotion-5"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-3"
              >
                <svg
                  data-file-name="filter.svg"
                  width={20}
                />
              </div>
              Add Field Filter
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChartFacet /> should render without an attribute 1`] = `
<ChartForm
  chart={
    Object {
      "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
      "type": "facet",
    }
  }
  chartIndex={0}
  dispatch={[Function]}
/>
`;
